# FOUNDATION

./: .gitignore  LOGGING.md  README.md  TESTING.md  coverage.sh  jsconfig.json  kill.sh  package-lock.json  package.json  reset.sh  test.sh
core-ontology/: AbstractProduct.ttl  AgentCapacity.ttl  Application.ttl  Computer.ttl  Concept.ttl  DigitalThing.ttl  Email.ttl  FoundationApp.ttl  GitRepository.ttl  Goal.ttl  GraphicsProcessor.ttl  InformationObject.ttl  KeyResult.ttl  Material.ttl  Memory.ttl  NetworkInterface.ttl  Objective.ttl  OperatingSystem.ttl  Organization.ttl  Person.ttl  (+23 more)
src-tauri/: Cargo.toml  tauri.conf.json  test-coverage.sh
src-tauri/src/: lib.rs  main.rs  namespaces.rs
src-tauri/src/commands/: class__search.rs  db__get_stats.rs  entity.rs  graph__get_ontology.rs  logging.rs  mod.rs  node__check_is_instance.rs  node__get_backlinks.rs  node__get_icon.rs  node__get_statistics.rs  node__get_triples.rs  property__get_applicable.rs  setup.rs  setup__check_initial.rs  setup__complete_initial.rs  shortcuts.rs  system__get_info.rs  triple__get_all.rs
src-tauri/src/db/: mod.rs
src-tauri/src/eavto/: connection.rs  executor.rs  mod.rs  object_type.rs  origin_type.rs  query.rs  query_result_type.rs  stats.rs  store.rs  test_helpers.rs  transaction_type.rs  triple_type.rs  xsd_type.rs
src-tauri/src/ontology/: mod.rs
src-tauri/src/owl/: class.rs  individual.rs  mod.rs  property.rs  thing.rs  vocabulary.rs
src-tauri/src/rdf/: mod.rs  store.rs  types.rs  validation.rs
src-tauri/src/rdf/adapters/: mod.rs  sqlite.rs
src-tauri/src/turtle/: mod.rs
(+55 files in other folders)
