[package]
name = "FOUNDATION-tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "FOUNDATION_tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["test"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5.0"
rio_turtle = "0.8"
rio_xml = "0.8"
rio_api = "0.8"
lazy_static = "1.4"
sha2 = "0.10"  # For checksums
chrono = "0.4"  # For timestamps
sysinfo = "0.32"  # For system information
hostname = "0.4"  # For hostname detection

[dev-dependencies]
tempfile = "3.8"  # Temporary files for tests

[profile.test]
opt-level = 0
